# cc-skills-sdlc

./: .gitignore  .orphaned_at  AGENTS_REFERENCE.md  CHANGELOG.md  CLAUDE.md  active-task_ornith-t0-1783561459.json  current-run_console_4eac06b2-e23b-4748-ab14-b233f82f003c.json  hooks.json  hooks.json.disabled  model-selection_ornith-t0-1783561459.json  prompt-patterns-catalog.md  task-contract-ornith-t0-1783561459.json
.claude-plugin/: plugin.json
.go-orphan-quarantine/: blocked_recon_ornith-t0-1783561459.json  pi-model_ornith-t0-1783561459.json  worktree-ornith-t0-1783561459.json
.in_use/: 12948  17288  19148  20796  24268  26220  34084  37852  41096  41104  41228  43056  43980  46020  46896  47460  47772  48344  49048  51504  5164  51740  53272  54068  56580  60128
__lib/: router.py
agents/: adversarial-compliance.md  adversarial-critic.md  adversarial-io-validation.md  adversarial-logic.md  adversarial-performance.md  adversarial-quality.md  adversarial-rca.md  adversarial-security.md  adversarial-state-machine.md  adversarial-testing.md  code-reviewer.md  (+17 more)
contract-primitives/: pyproject.toml
contract-primitives/src/.claude/hooks/state/: compaction_marker_console_20fed085-ae53-4044-b99b-14f0df680399.json
contract-primitives/src/.claude/state/handoff/: console_20fed085-ae53-4044-b99b-14f0df680399_20260411T005139_handoff.json
contract-primitives/src/.claude/state/sessions/85181cb5-7afd-44f4-a387-13e41e8f39d1/: intent_state.json
contract-primitives/src/contract_primitives/: __init__.py  events.py  plan_consumption.py  schemas.py  validators.py
(+1469 files in other folders)
