[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-primitives"
version = "0.1.0"
description = "Shared schema helpers for contract-sensitive workflow artifacts"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/contract_primitives"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
